# prac_lib

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/practice/prac_lib/: prac_lib.hpp
lib/src/: prac_lib.cpp
test/: CMakeLists.txt
test/src/: prac_lib_test.cpp
